VERY initial idea.
- initial idea of how the OSGi extensions could be added
- VERY crappy class loader
- changed IInitailizer logic for core to make it possible for osgi hook
- no tests and documentation for now
- no cleanup
- no formatting

Signed-off-by: Andreas Pieber <anpieber@gmail.com>

--- a/wicket-core/pom.xml
+++ b/wicket-core/pom.xml
@@ -24,8 +24,9 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>wicket-core</artifactId>
-	<packaging>jar</packaging>
-	<name>Wicket Core</name>
+	<packaging>bundle</packaging>
+  <name>Wicket Core</name>
+
 	<description>
 		Wicket is a Java web application framework that takes simplicity, 
 		separation of concerns and ease of development to a whole new level. 
@@ -86,7 +87,22 @@
 						<exclude>**/jquery*.js</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
+      </plugin>
+<plugin>
+  <groupId>org.apache.felix</groupId>
+  <artifactId>maven-bundle-plugin</artifactId>
+  <extensions>true</extensions>
+  <configuration>
+    <instructions>
+      <Import-Package>
+        org.apache.wicket.*; version="${project.version}",
+        javax.imageio; resolution:="optional",
+        junit.framework; resolution:="optional",
+        *
+      </Import-Package>
+    </instructions>
+  </configuration>
+</plugin>
 		</plugins>
 	</build>
 </project>
