--- a/wicket-request/pom.xml
+++ b/wicket-request/pom.xml
@@ -27,6 +27,7 @@
   <artifactId>wicket-request</artifactId>
   <version>6.0-SNAPSHOT</version>
   <name>Wicket Request</name>
+<packaging>bundle</packaging>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -34,4 +35,22 @@
       <artifactId>wicket-util</artifactId>
     </dependency>
   </dependencies>
+<build>
+  <plugins>
+<plugin>
+  <groupId>org.apache.felix</groupId>
+  <artifactId>maven-bundle-plugin</artifactId>
+  <extensions>true</extensions>
+  <configuration>
+    <instructions>
+      <Import-Package>
+        org.apache.wicket.*;version="${project.version}",
+        *
+      </Import-Package>
+    </instructions>
+  </configuration>
+</plugin>
+</plugins>
+</build>
+
 </project>
