--- a/wicket-osgi/pom.xml
+++ b/wicket-osgi/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.apache.wicket</groupId>
     <artifactId>wicket-parent</artifactId>
-    <version>6.0-SNAPSHOT</version>
+    <version>6.0-OSGI-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.apache.wicket</groupId>
   <artifactId>wicket-osgi</artifactId>
-  <version>6.0-SNAPSHOT</version>
+  <version>6.0-OSGI-SNAPSHOT</version>
   <name>Wicket OSGi</name>
 	<packaging>bundle</packaging>
   <dependencies>
