--- a/wicket-request/pom.xml
+++ b/wicket-request/pom.xml
@@ -21,11 +21,11 @@
   <parent>
     <artifactId>wicket-parent</artifactId>
     <groupId>org.apache.wicket</groupId>
-    <version>6.0-SNAPSHOT</version>
+    <version>6.0-OSGI-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.wicket</groupId>
   <artifactId>wicket-request</artifactId>
-  <version>6.0-SNAPSHOT</version>
+  <version>6.0-OSGI-SNAPSHOT</version>
   <name>Wicket Request</name>
 <packaging>bundle</packaging>
   <url>http://maven.apache.org</url>
