--- a/wicket-osgi/pom.xml
+++ b/wicket-osgi/pom.xml
@@ -37,36 +37,37 @@
 			<scope>provided</scope>
 		</dependency>
     <dependency>
-          <groupId>org.osgi</groupId>
-              <artifactId>org.osgi.core</artifactId>
-                  <version>4.2.0</version>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>4.2.0</version>
     </dependency>
     <dependency>
-          <groupId>org.osgi</groupId>
-              <artifactId>org.osgi.compendium</artifactId>
-                  <version>4.2.0</version>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.compendium</artifactId>
+      <version>4.2.0</version>
     </dependency>
     <dependency>
-          <groupId>org.apache.wicket</groupId>
-              <artifactId>wicket-core</artifactId>
+      <groupId>org.apache.wicket</groupId>
+      <artifactId>wicket-core</artifactId>
     </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
-  <groupId>org.apache.felix</groupId>
-  <artifactId>maven-bundle-plugin</artifactId>
-  <extensions>true</extensions>
-  <configuration>
-    <instructions>
-      <Bundle-Activator>org.apache.wicket.osgi.internal.Activator</Bundle-Activator>
-      <Import-Package>
-        org.apache.wicket.*; version="${project.version}",
-        *
-      </Import-Package>
-    </instructions>
-  </configuration>
-</plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-Activator>org.apache.wicket.osgi.internal.Activator</Bundle-Activator>
+            <Import-Package>
+              org.apache.wicket.*; version="[${project.version},7)",
+              *
+            </Import-Package>
+          </instructions>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
+
